catch UnsupportedEncodingException